<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/file_cut"
        android:icon="@drawable/edit_cut"
        android:title="@string/file_cut"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/file_copy"
        android:icon="@drawable/edit_copy"
        android:title="@string/file_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/file_paste"
        android:icon="@drawable/edit_paste"
        android:title="@string/file_paste"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/file_delete"
        android:icon="@drawable/edit_delete"
        android:title="@string/file_delete"
        app:showAsAction="ifRoom" />
</menu>
