<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/toolButtonsBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/undoButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/edit_undo"
                android:text="@string/menu_undo" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/redoButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/edit_redo"
                android:text="@string/menu_redo" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/newButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/document_new"
                android:text="@string/newButton" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/pathButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/document_open"
                android:text="@string/pathButton" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/saveButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/document_save"
                android:text="@string/saveButton" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/saveAsButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/document_save_as"
                android:text="@string/saveAsButton" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/playButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/play"
                android:text="@string/playButton" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/buildButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/build"
                android:text="@string/buildButton" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/logButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/logviewer"
                android:text="@string/logButton" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/terminalButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/imgbuttdesc"
                android:scaleType="centerInside"
                android:src="@drawable/gnome_terminal"
                android:text="@string/terminalButton" />

        </LinearLayout>
    </HorizontalScrollView>

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>